Replace profileView.html

--- a/profileView.html
+++ b/profileView.html
@@ -61,6 +61,7 @@
                     <form id="changePasswordForm">
                         <input type="password" id="oldPassword" placeholder="Old Password" required>
                         <input type="password" id="rePassword" placeholder="Repeat Password" required>
+                        <input type="password" id="newPassword" placeholder="New Password" required>
                         <button id="submit">submit</button>
                         <div id="password-change-success"></div>
                         <div id="change-password-feedback"></div>
