Replace client.html

--- a/static/client.html
+++ b/static/client.html
@@ -5,7 +5,6 @@
 <head>
 
     <title>User Authentication</title>
-
     <link href="client.css" type="text/css" rel="stylesheet">
     <script src="client.js" type="text/javascript"></script>
 
@@ -41,6 +40,7 @@
                 </div>
                 
                 <button type="submit"> Login </button>
+                <button type="button" onclick="handleForgotPassword()"> password? </button>
                 
                 <div id="login-feedback"></div>
             </form>
