--- a/static/profileView.html
+++ b/static/profileView.html
@@ -1,6 +1,9 @@
 <html>
 <head>
     <title>User Profile</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/crypto-js@4.1.1/crypto-js.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/10.5.26/jsrsasign-all-min.js"></script>
     <link rel="stylesheet" href="stylesForCertainView.css">
 </head>
 <body>
